<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/inacap_200x200" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/android_128x128"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_title"
        android:layout_gravity="center"
        android:textSize="20dp"/>
    <EditText
        android:id="@+id/edt_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hnt_age"
        android:inputType="number"/>
    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hnt_name"/>
    <EditText
        android:id="@+id/edt_peso_actual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hnt_peso_actual"
        android:inputType="number"/>

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_calculate"
        android:drawableRight="@drawable/calcular_24x24"/>
    <Button
        android:id="@+id/btn_instucciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_instrucciones"
        android:drawableRight="@drawable/ayuda_24x24"/>
    <TextView
        android:id="@+id/txv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_result"
        />


</LinearLayout>